--- a/_parents-matter/collection.yml
+++ b/_parents-matter/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents-matter:
     output: true
     order:
+      - School Home Partnership.md
       - School Calendar.md
       - Modes of Communication.md
       - Letters to Parents.md
