{"message":"Update file: collection.yml","userId":"1095","fileName":"collection.yml"}

--- a/_parents-matter/collection.yml
+++ b/_parents-matter/collection.yml
@@ -2,7 +2,7 @@ collections:
   parents-matter:
     output: true
     order:
-      - School Home Partnership.md
+      - School & Home Partnership.md
       - School Calendar.md
       - Modes of Communication.md
       - Letters to Parents.md
