{"message":"Update file: collection.yml","userId":"1095","fileName":"collection.yml"}

--- a/_parents-matter/collection.yml
+++ b/_parents-matter/collection.yml
@@ -12,4 +12,4 @@ collections:
       - School Rules & Discipline Guidelines.md
       - Resources for Parents.md
       - Parent Volunteers.md
-      - School & Home Partnership.md
+      - School Home Partnership.md
