--- a/_our-unity-story/collection.yml
+++ b/_our-unity-story/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-unity-story:
     output: true
     order:
+      - Events.md
       - School Leaders’ Message.md
       - School Direction and Focus.md
       - Our School Crest & School Song.md
