{"message":"Update file: collection.yml","userId":"967","fileName":"collection.yml"}

--- a/_team-ups/collection.yml
+++ b/_team-ups/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - School Advisory Committee.md
-      - School Leaders & Middle Management.md
+      - School Leaders & Key Personnel.md
       - Lower Primary Teachers.md
       - Middle Primary Teachers.md
       - Upper Primary Teachers.md
