{"message":"Update file: collection.yml","userId":"967","fileName":"collection.yml"}

--- a/_parents-matter/collection.yml
+++ b/_parents-matter/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents-matter:
     output: true
     order:
+      - Engagement Charter.md
       - School Calendar.md
       - School Home Partnership.md
       - Modes of Communication.md
