--- a/_our-unity-story/collection.yml
+++ b/_our-unity-story/collection.yml
@@ -2,7 +2,7 @@ collections:
   our-unity-story:
     output: true
     order:
-      - School Leaders’ Message.md
+      - Principal's Message.md
       - School Direction and Focus.md
       - Our School Crest & School Song.md
       - Events.md
